--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body {
 }
 
 header, 
-main {
+main,
+footer {
   background-color: rgba(218, 165, 32, 0.5);
   margin: 50px 50px 0px 50px;
 }
@@ -28,5 +29,15 @@ header {
 
 main {
   height: 70vh;
+}
+
+footer {
+  background-color: rgba(222, 184, 135, 0.7);
+  font-size: 16px;
+  margin-top: 40px;
+  height: 5vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
