--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 header, 
 main,
 footer {
-  background-color: rgba(218, 165, 32, 0.5);
+  background-color: rgba(218, 165, 32, 0.8);
   margin: 50px 50px 0px 50px;
 }
 
@@ -28,16 +28,84 @@ header {
 }
 
 main {
-  height: 70vh;
+  height: 60vh;
+}
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 footer {
-  background-color: rgba(222, 184, 135, 0.7);
+  background-color: rgba(222, 184, 135, 1);
   font-size: 16px;
   margin-top: 40px;
-  height: 5vh;
+  height: 10vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+footer p {
+  padding: 5px;
 }
 
