--- a/style.css
+++ b/style.css
@@ -11,12 +11,12 @@ body {
 header, 
 main,
 footer {
-  background-color: rgba(218, 165, 32, 0.8);
+  background-color: rgba(248, 245, 245, 0.8);
   margin: 50px 50px 0px 50px;
 }
 
 header {
-  height: 15vh;
+  height: 150px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -29,32 +29,49 @@ header {
 
 main {
   height: 600px;
+  padding: 20px;
   display: grid;
-  grid-template-columns: 1fr 4fr;
-  grid-template-rows: repeat(auto-fill, minmax(50px, 1fr));
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(10, 1fr);
 }
 
-form {
-  font-size: 24px;
+.form {
+  grid-row: 1/11;
+}
+
+#form {
   height: 100%;
-  padding: 20px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  align-items: flex-start;
+  font-size: 22px;
+  padding-right: 20px;
 }
 
-div.library {
-  border: 1px solid black;
-  height: 100%;
+#form > input {
+  height: 30px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+#form > label {
+  padding-bottom: 5px;
 }
 
 .radios {
   font-size: 18px;
-  padding: 10px;
+  margin-bottom: 18px;
 }
 
+.library {
+  border: 5px solid pink;
+  height: 100%;
+}
+
+
 footer {
-  background-color: rgba(222, 184, 135, 1);
+  background-color: rgba(248, 245, 245, 0.8);
   font-size: 16px;
   margin-top: 40px;
   height: 10vh;
