--- a/style.css
+++ b/style.css
@@ -35,12 +35,26 @@ main {
   grid-template-rows: repeat(10, 1fr);
 }
 
+.add {
+  grid-column: 1/3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#add-button {
+  width: 33%;
+  border-radius: 10px;
+}
+
 .form {
-  grid-row: 1/11;
+  grid-row: 3/11;
+  display: none;
 }
 
 #form {
   height: 100%;
+  grid-row: 2/11;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -50,9 +64,10 @@ main {
 }
 
 #form > input {
-  height: 30px;
+  height: 40px;
   width: 100%;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
+  border-radius: 10px;
 }
 
 #form > label {
@@ -64,11 +79,18 @@ main {
   margin-bottom: 18px;
 }
 
-.library {
-  border: 5px solid pink;
-  height: 100%;
+div.library {
+  grid-area: 2 / 2 / 11 / 3;
 }
 
+#submit-button,
+#add-button {
+  margin-top: 10px;
+  font-size: 18px;
+  padding: 5px;
+  background-color: green;
+  color: white;
+}
 
 footer {
   background-color: rgba(248, 245, 245, 0.8);
