--- a/style.css
+++ b/style.css
@@ -29,14 +29,14 @@ header {
 
 main {
   height: 600px;
-  padding: 20px;
+  padding: 10px 20px 20px 20px;
   display: grid;
-  grid-template-columns: 1fr 3fr;
-  grid-template-rows: repeat(10, 1fr);
+  grid-template-columns: 250px 1fr 1fr 1fr 1fr;
+  grid-template-rows: 50px 1fr 1fr 1fr 1fr;
 }
 
 .add {
-  grid-column: 1/3;
+  grid-column: 2/6;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -45,10 +45,12 @@ main {
 #add-button {
   width: 33%;
   border-radius: 10px;
+  margin-bottom: 10px;
 }
 
 .form {
-  grid-row: 3/11;
+  grid-row: 1/6;
+  width: 250px;
   display: none;
 }
 
@@ -79,10 +81,6 @@ main {
   margin-bottom: 18px;
 }
 
-div.library {
-  grid-area: 2 / 2 / 11 / 3;
-}
-
 #submit-button,
 #add-button {
   margin-top: 10px;
@@ -90,6 +88,35 @@ div.library {
   padding: 5px;
   background-color: green;
   color: white;
+}
+
+#library {
+  grid-area: 2/2/6/6;
+  border: 1px solid black;
+  border-radius: 10px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(auto-fill, 150px);
+  padding: 10px;
+}
+
+.book-card {
+  width: auto;
+  height: 150px;
+  font-size: 1rem;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: flex-start;
+  /* display: none; */
+}
+
+.book-card > .title {
+  font-size: 1.2rem;
 }
 
 footer {
